24 step urlencode url

--- a/pages/index10.html
+++ b/pages/index10.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Абсолютная правда</h5>
                       <p class="card-text">Коростелев Дмитрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютная_правда.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%B0%D1%8F_%D0%BF%D1%80%D0%B0%D0%B2%D0%B4%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Абсолютная пустота (предисловие)</h5>
                       <p class="card-text">Лем Станислав</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютная_пустота_(предисловие).txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%B0%D1%8F_%D0%BF%D1%83%D1%81%D1%82%D0%BE%D1%82%D0%B0_%28%D0%BF%D1%80%D0%B5%D0%B4%D0%B8%D1%81%D0%BB%D0%BE%D0%B2%D0%B8%D0%B5%29.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Абсолютная технократия</h5>
                       <p class="card-text">Альдани Лино</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютная_технократия.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%B0%D1%8F_%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BA%D1%80%D0%B0%D1%82%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Абсолютно невозможно</h5>
                       <p class="card-text">Силверберг Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютно_невозможно.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%BE_%D0%BD%D0%B5%D0%B2%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Абсолютное Оружие</h5>
                       <p class="card-text">Ершов Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютное_Оружие.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%BE%D0%B5_%D0%9E%D1%80%D1%83%D0%B6%D0%B8%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Абсолютное оружие Горгон</h5>
                       <p class="card-text">Щербаков Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютное_оружие_Горгон.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%BE%D0%B5_%D0%BE%D1%80%D1%83%D0%B6%D0%B8%D0%B5_%D0%93%D0%BE%D1%80%D0%B3%D0%BE%D0%BD.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Абсолютное счастье</h5>
                       <p class="card-text">Якименко Константин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютное_счастье.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%BE%D0%B5_%D1%81%D1%87%D0%B0%D1%81%D1%82%D1%8C%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Абсолютное время</h5>
                       <p class="card-text">Бялецкий Януш</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютное_время.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%BE%D0%B5_%D0%B2%D1%80%D0%B5%D0%BC%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Абсолютный хрум</h5>
                       <p class="card-text">Тарабанов Дмитрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютный_хрум.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D1%8B%D0%B9_%D1%85%D1%80%D1%83%D0%BC.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Абстиненция</h5>
                       <p class="card-text">Нестеренко Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абстиненция.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D1%82%D0%B8%D0%BD%D0%B5%D0%BD%D1%86%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
