--- a/pages/index2.html
+++ b/pages/index2.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Нырок в забвение</h5>
                       <p class="card-text">Хенрик Ричард</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Политические детективы</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Нырок_в_забвение.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9D%D1%8B%D1%80%D0%BE%D0%BA_%D0%B2_%D0%B7%D0%B0%D0%B1%D0%B2%D0%B5%D0%BD%D0%B8%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Поющий колокольчик</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><a href="/static/books/Поющий_колокольчик.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9F%D0%BE%D1%8E%D1%89%D0%B8%D0%B9_%D0%BA%D0%BE%D0%BB%D0%BE%D0%BA%D0%BE%D0%BB%D1%8C%D1%87%D0%B8%D0%BA.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Продается тело Христа</h5>
                       <p class="card-text">Аджалов Владимир Исфандеярович</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Продается_тело_Христа.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9F%D1%80%D0%BE%D0%B4%D0%B0%D0%B5%D1%82%D1%81%D1%8F_%D1%82%D0%B5%D0%BB%D0%BE_%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Роковой поцелуй</h5>
                       <p class="card-text">Патрацкая Наталья</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span><span class="badge badge-light">Прочие приключения</span></p>
-                      <p class="card-text"><a href="/static/books/Роковой_поцелуй.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%BE%D0%B9_%D0%BF%D0%BE%D1%86%D0%B5%D0%BB%D1%83%D0%B9.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Те, кто против нас</h5>
                       <p class="card-text">Руденко Борис</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Те,_кто_против_нас.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A2%D0%B5%2C_%D0%BA%D1%82%D0%BE_%D0%BF%D1%80%D0%BE%D1%82%D0%B8%D0%B2_%D0%BD%D0%B0%D1%81.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Телепортеры, внимание!</h5>
                       <p class="card-text">Мар Курт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Телепортеры,_внимание!.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A2%D0%B5%D0%BB%D0%B5%D0%BF%D0%BE%D1%80%D1%82%D0%B5%D1%80%D1%8B%2C_%D0%B2%D0%BD%D0%B8%D0%BC%D0%B0%D0%BD%D0%B8%D0%B5%21.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Зодиак</h5>
                       <p class="card-text">Стивенсон Нил</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Зодиак.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%97%D0%BE%D0%B4%D0%B8%D0%B0%D0%BA.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Justitia - est Часть 1</h5>
                       <p class="card-text">Картман Эрика</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><a href="/static/books/Justitia_-_est_Часть_1.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/Justitia_-_est_%D0%A7%D0%B0%D1%81%D1%82%D1%8C_1.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
