--- a/pages/index3.html
+++ b/pages/index3.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Астронавт Джонс</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Астронавт_Джонс.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D1%81%D1%82%D1%80%D0%BE%D0%BD%D0%B0%D0%B2%D1%82_%D0%94%D0%B6%D0%BE%D0%BD%D1%81.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Будет скафандр - будут и путешествия</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Будет_скафандр_-_будут_и_путешествия.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%91%D1%83%D0%B4%D0%B5%D1%82_%D1%81%D0%BA%D0%B0%D1%84%D0%B0%D0%BD%D0%B4%D1%80_-_%D0%B1%D1%83%D0%B4%D1%83%D1%82_%D0%B8_%D0%BF%D1%83%D1%82%D0%B5%D1%88%D0%B5%D1%81%D1%82%D0%B2%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Дочь Нефертити</h5>
                       <p class="card-text">Семенова Татьяна</p>
                       <p class="card-text"><span class="badge badge-light">Детская образовательная литература</span><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Дочь_Нефертити.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%94%D0%BE%D1%87%D1%8C_%D0%9D%D0%B5%D1%84%D0%B5%D1%80%D1%82%D0%B8%D1%82%D0%B8.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Наложница императора</h5>
                       <p class="card-text">Семенова Татьяна</p>
                       <p class="card-text"><span class="badge badge-light">Детская образовательная литература</span><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Наложница_императора.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9D%D0%B0%D0%BB%D0%BE%D0%B6%D0%BD%D0%B8%D1%86%D0%B0_%D0%B8%D0%BC%D0%BF%D0%B5%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Общая теория Доминант</h5>
                       <p class="card-text">Белохвостов Денис</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Общая_теория_Доминант.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9E%D0%B1%D1%89%D0%B0%D1%8F_%D1%82%D0%B5%D0%BE%D1%80%D0%B8%D1%8F_%D0%94%D0%BE%D0%BC%D0%B8%D0%BD%D0%B0%D0%BD%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Взгляд из сердца</h5>
                       <p class="card-text">Мейстер Максим</p>
                       <p class="card-text"><span class="badge badge-light">Детская проза</span><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочая детская литература</span><span class="badge badge-light">Эзотерика</span></p>
-                      <p class="card-text"><a href="/static/books/Взгляд_из_сердца.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%92%D0%B7%D0%B3%D0%BB%D1%8F%D0%B4_%D0%B8%D0%B7_%D1%81%D0%B5%D1%80%D0%B4%D1%86%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Звездный зверь ( Звездное чудовище)</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Детская фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Звездный_зверь_(_Звездное_чудовище).txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%97%D0%B2%D0%B5%D0%B7%D0%B4%D0%BD%D1%8B%D0%B9_%D0%B7%D0%B2%D0%B5%D1%80%D1%8C_%28_%D0%97%D0%B2%D0%B5%D0%B7%D0%B4%D0%BD%D0%BE%D0%B5_%D1%87%D1%83%D0%B4%D0%BE%D0%B2%D0%B8%D1%89%D0%B5%29.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
