--- a/pages/index1.html
+++ b/pages/index1.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Алиби</h5>
                       <p class="card-text">ИВАНОВ Сергей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><a href="/static/books/Алиби.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%BB%D0%B8%D0%B1%D0%B8.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">Бич небесный</h5>
                       <p class="card-text">Стерлинг Брюс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Бич_небесный.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%91%D0%B8%D1%87_%D0%BD%D0%B5%D0%B1%D0%B5%D1%81%D0%BD%D1%8B%D0%B9.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">Цена посвящения: Серый Ангел</h5>
                       <p class="card-text">Маркеев Олег Георгиевич</p>
                       <p class="card-text"><span class="badge badge-light">Боевики</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Цена_посвящения_Серый_Ангел.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A6%D0%B5%D0%BD%D0%B0_%D0%BF%D0%BE%D1%81%D0%B2%D1%8F%D1%89%D0%B5%D0%BD%D0%B8%D1%8F_%D0%A1%D0%B5%D1%80%D1%8B%D0%B9_%D0%90%D0%BD%D0%B3%D0%B5%D0%BB.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Цена посвящения: Время Зверя</h5>
                       <p class="card-text">Маркеев Олег Георгиевич</p>
                       <p class="card-text"><span class="badge badge-light">Боевики</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Цена_посвящения_Время_Зверя.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A6%D0%B5%D0%BD%D0%B0_%D0%BF%D0%BE%D1%81%D0%B2%D1%8F%D1%89%D0%B5%D0%BD%D0%B8%D1%8F_%D0%92%D1%80%D0%B5%D0%BC%D1%8F_%D0%97%D0%B2%D0%B5%D1%80%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Дело Джен, или Эйра немилосердия</h5>
                       <p class="card-text">Fforde Jasper</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><a href="/static/books/Дело_Джен,_или_Эйра_немилосердия.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%94%D0%B5%D0%BB%D0%BE_%D0%94%D0%B6%D0%B5%D0%BD%2C_%D0%B8%D0%BB%D0%B8_%D0%AD%D0%B9%D1%80%D0%B0_%D0%BD%D0%B5%D0%BC%D0%B8%D0%BB%D0%BE%D1%81%D0%B5%D1%80%D0%B4%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Фабрика дьявола</h5>
                       <p class="card-text">Мар Курт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Фабрика_дьявола.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A4%D0%B0%D0%B1%D1%80%D0%B8%D0%BA%D0%B0_%D0%B4%D1%8C%D1%8F%D0%B2%D0%BE%D0%BB%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Говорящий камень</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><a href="/static/books/Говорящий_камень.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%93%D0%BE%D0%B2%D0%BE%D1%80%D1%8F%D1%89%D0%B8%D0%B9_%D0%BA%D0%B0%D0%BC%D0%B5%D0%BD%D1%8C.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">И Он пришел... ИТ-роман</h5>
                       <p class="card-text">Аджалов Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/И_Он_пришел..._ИТ-роман.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%98_%D0%9E%D0%BD_%D0%BF%D1%80%D0%B8%D1%88%D0%B5%D0%BB..._%D0%98%D0%A2-%D1%80%D0%BE%D0%BC%D0%B0%D0%BD.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Казнить нельзя помиловать</h5>
                       <p class="card-text">Чертанов Максим</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Триллеры</span></p>
-                      <p class="card-text"><a href="/static/books/Казнить_нельзя_помиловать.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9A%D0%B0%D0%B7%D0%BD%D0%B8%D1%82%D1%8C_%D0%BD%D0%B5%D0%BB%D1%8C%D0%B7%D1%8F_%D0%BF%D0%BE%D0%BC%D0%B8%D0%BB%D0%BE%D0%B2%D0%B0%D1%82%D1%8C.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Ночь, которая умирает</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Прочие Детективы</span></p>
-                      <p class="card-text"><a href="/static/books/Ночь,_которая_умирает.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%9D%D0%BE%D1%87%D1%8C%2C_%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D0%B0%D1%8F_%D1%83%D0%BC%D0%B8%D1%80%D0%B0%D0%B5%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
