--- a/pages/index4.html
+++ b/pages/index4.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">Сборник рассказов и повестей</h5>
                       <p class="card-text">ЛУКИНА Любовь</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span><span class="badge badge-light">Публицистика</span><span class="badge badge-light">Юмористическая фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Сборник_рассказов_и_повестей.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%A1%D0%B1%D0%BE%D1%80%D0%BD%D0%B8%D0%BA_%D1%80%D0%B0%D1%81%D1%81%D0%BA%D0%B0%D0%B7%D0%BE%D0%B2_%D0%B8_%D0%BF%D0%BE%D0%B2%D0%B5%D1%81%D1%82%D0%B5%D0%B9.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">...Яко помниши его</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/...Яко_помниши_его.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/...%D0%AF%D0%BA%D0%BE_%D0%BF%D0%BE%D0%BC%D0%BD%D0%B8%D1%88%D0%B8_%D0%B5%D0%B3%D0%BE.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">...На Вавилон</h5>
                       <p class="card-text">Силверберг Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/...На_Вавилон.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/...%D0%9D%D0%B0_%D0%92%D0%B0%D0%B2%D0%B8%D0%BB%D0%BE%D0%BD.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">...Вставьте шплинт А в гнездо Б...</h5>
                       <p class="card-text">Азимов Айзек</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/...Вставьте_шплинт_А_в_гнездо_Б.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/...%D0%92%D1%81%D1%82%D0%B0%D0%B2%D1%8C%D1%82%D0%B5_%D1%88%D0%BF%D0%BB%D0%B8%D0%BD%D1%82_%D0%90_%D0%B2_%D0%B3%D0%BD%D0%B5%D0%B7%D0%B4%D0%BE_%D0%91.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">...к звездам!</h5>
                       <p class="card-text">Радутный Радий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/...к_звездам!.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/...%D0%BA_%D0%B7%D0%B2%D0%B5%D0%B7%D0%B4%D0%B0%D0%BC%21.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">1-книга. Весна на Галане</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/1-книга._Весна_на_Галане.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/1-%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%92%D0%B5%D1%81%D0%BD%D0%B0_%D0%BD%D0%B0_%D0%93%D0%B0%D0%BB%D0%B0%D0%BD%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">10-я книга. Варкенские перемены.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/10-я_книга._Варкенские_перемены.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/10-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%92%D0%B0%D1%80%D0%BA%D0%B5%D0%BD%D1%81%D0%BA%D0%B8%D0%B5_%D0%BF%D0%B5%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D1%8B.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">11-я книга. Рождение империи сенсетивов</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/11-я_книга._Рождение_империи_сенсетивов.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/11-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%A0%D0%BE%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B8%D0%BC%D0%BF%D0%B5%D1%80%D0%B8%D0%B8_%D1%81%D0%B5%D0%BD%D1%81%D0%B5%D1%82%D0%B8%D0%B2%D0%BE%D0%B2.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">13-я книга. Галанское сватовство</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/13-я_книга._Галанское_сватовство.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/13-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%93%D0%B0%D0%BB%D0%B0%D0%BD%D1%81%D0%BA%D0%BE%D0%B5_%D1%81%D0%B2%D0%B0%D1%82%D0%BE%D0%B2%D1%81%D1%82%D0%B2%D0%BE.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">132-й</h5>
                       <p class="card-text">Макаров Андрей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/132-й.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/132-%D0%B9.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
