--- a/pages/index5.html
+++ b/pages/index5.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">14-я книга. Барабаны Таланов</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/14-я_книга._Барабаны_Таланов.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/14-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%91%D0%B0%D1%80%D0%B0%D0%B1%D0%B0%D0%BD%D1%8B_%D0%A2%D0%B0%D0%BB%D0%B0%D0%BD%D0%BE%D0%B2.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">15-я книга. Школа арханелов</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/15-я_книга._Школа_арханелов.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/15-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%A8%D0%BA%D0%BE%D0%BB%D0%B0_%D0%B0%D1%80%D1%85%D0%B0%D0%BD%D0%B5%D0%BB%D0%BE%D0%B2.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">2-я книга. Сенсетивы Галана</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/2-я_книга._Сенсетивы_Галана.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/2-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%A1%D0%B5%D0%BD%D1%81%D0%B5%D1%82%D0%B8%D0%B2%D1%8B_%D0%93%D0%B0%D0%BB%D0%B0%D0%BD%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">4-я книга. Экспедиция на Голубой планетоид</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/4-я_книга._Экспедиция_на_Голубой_планетоид.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/4-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%AD%D0%BA%D1%81%D0%BF%D0%B5%D0%B4%D0%B8%D1%86%D0%B8%D1%8F_%D0%BD%D0%B0_%D0%93%D0%BE%D0%BB%D1%83%D0%B1%D0%BE%D0%B9_%D0%BF%D0%BB%D0%B0%D0%BD%D0%B5%D1%82%D0%BE%D0%B8%D0%B4.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">5-я книга. В подземельях Бидрупа.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/5-я_книга._В_подземельях_Бидрупа.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/5-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%92_%D0%BF%D0%BE%D0%B4%D0%B7%D0%B5%D0%BC%D0%B5%D0%BB%D1%8C%D1%8F%D1%85_%D0%91%D0%B8%D0%B4%D1%80%D1%83%D0%BF%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">53-я американская мечта</h5>
                       <p class="card-text">Салли Джейли</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/53-я_американская_мечта.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/53-%D1%8F_%D0%B0%D0%BC%D0%B5%D1%80%D0%B8%D0%BA%D0%B0%D0%BD%D1%81%D0%BA%D0%B0%D1%8F_%D0%BC%D0%B5%D1%87%D1%82%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">6-я книга. Сражение за Бидруп.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/6-я_книга._Сражение_за_Бидруп.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/6-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%A1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B7%D0%B0_%D0%91%D0%B8%D0%B4%D1%80%D1%83%D0%BF.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">64-клеточный дурдом</h5>
                       <p class="card-text">Лейбер Фриц</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/64-клеточный_дурдом.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/64-%D0%BA%D0%BB%D0%B5%D1%82%D0%BE%D1%87%D0%BD%D1%8B%D0%B9_%D0%B4%D1%83%D1%80%D0%B4%D0%BE%D0%BC.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">7-я книга. День Откровения</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/7-я_книга._День_Откровения.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/7-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%94%D0%B5%D0%BD%D1%8C_%D0%9E%D1%82%D0%BA%D1%80%D0%BE%D0%B2%D0%B5%D0%BD%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">8-я книга. Полет Уригленны.</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/8-я_книга._Полет_Уригленны.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/8-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%9F%D0%BE%D0%BB%D0%B5%D1%82_%D0%A3%D1%80%D0%B8%D0%B3%D0%BB%D0%B5%D0%BD%D0%BD%D1%8B.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
