--- a/pages/index6.html
+++ b/pages/index6.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">9-я книга. Тарат Зурбин</h5>
                       <p class="card-text">Карр Алекс</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/9-я_книга._Тарат_Зурбин.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/9-%D1%8F_%D0%BA%D0%BD%D0%B8%D0%B3%D0%B0._%D0%A2%D0%B0%D1%80%D0%B0%D1%82_%D0%97%D1%83%D1%80%D0%B1%D0%B8%D0%BD.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">90х60х90</h5>
                       <p class="card-text">Берендеев Кирилл</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/90х60х90.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/90%D1%8560%D1%8590.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">995-й святой</h5>
                       <p class="card-text">Цветков Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/995-й_святой.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/995-%D0%B9_%D1%81%D0%B2%D1%8F%D1%82%D0%BE%D0%B9.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">А, Критика!</h5>
                       <p class="card-text">Еськов Кирилл</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А,_Критика!.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%2C_%D0%9A%D1%80%D0%B8%D1%82%D0%B8%D0%BA%D0%B0%21.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">АНТОЛОГИЯ СКАНДИНАВСКОЙ ФАНТАСТИКИ</h5>
                       <p class="card-text">Бойе Карин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/АНТОЛОГИЯ_СКАНДИНАВСКОЙ_ФАНТАСТИКИ.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%9D%D0%A2%D0%9E%D0%9B%D0%9E%D0%93%D0%98%D0%AF_%D0%A1%D0%9A%D0%90%D0%9D%D0%94%D0%98%D0%9D%D0%90%D0%92%D0%A1%D0%9A%D0%9E%D0%99_%D0%A4%D0%90%D0%9D%D0%A2%D0%90%D0%A1%D0%A2%D0%98%D0%9A%D0%98.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">А бог един</h5>
                       <p class="card-text">Амнуэль Песах</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_бог_един.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B1%D0%BE%D0%B3_%D0%B5%D0%B4%D0%B8%D0%BD.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">А была ли тайна</h5>
                       <p class="card-text">Купцов Василий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_была_ли_тайна.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B1%D1%8B%D0%BB%D0%B0_%D0%BB%D0%B8_%D1%82%D0%B0%D0%B9%D0%BD%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">А человек забудет</h5>
                       <p class="card-text">Трусов Сергей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_человек_забудет.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D1%87%D0%B5%D0%BB%D0%BE%D0%B2%D0%B5%D0%BA_%D0%B7%D0%B0%D0%B1%D1%83%D0%B4%D0%B5%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">А что будет</h5>
                       <p class="card-text">Браун Фредерик</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_что_будет.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D1%87%D1%82%D0%BE_%D0%B1%D1%83%D0%B4%D0%B5%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">А что с ними делать дальше?</h5>
                       <p class="card-text">Фостер Алан Дин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_что_с_ними_делать_дальше.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D1%87%D1%82%D0%BE_%D1%81_%D0%BD%D0%B8%D0%BC%D0%B8_%D0%B4%D0%B5%D0%BB%D0%B0%D1%82%D1%8C_%D0%B4%D0%B0%D0%BB%D1%8C%D1%88%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
