--- a/pages/index7.html
+++ b/pages/index7.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">А дом стоит себе спокойно (Вечный дом)</h5>
                       <p class="card-text">Ван Вогт Альфред</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_дом_стоит_себе_спокойно_(Вечный_дом).txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B4%D0%BE%D0%BC_%D1%81%D1%82%D0%BE%D0%B8%D1%82_%D1%81%D0%B5%D0%B1%D0%B5_%D1%81%D0%BF%D0%BE%D0%BA%D0%BE%D0%B9%D0%BD%D0%BE_%28%D0%92%D0%B5%D1%87%D0%BD%D1%8B%D0%B9_%D0%B4%D0%BE%D0%BC%29.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">А еще мы выгуливаем собак</h5>
                       <p class="card-text">Хайнлайн Роберт</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_еще_мы_выгуливаем_собак.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B5%D1%89%D0%B5_%D0%BC%D1%8B_%D0%B2%D1%8B%D0%B3%D1%83%D0%BB%D0%B8%D0%B2%D0%B0%D0%B5%D0%BC_%D1%81%D0%BE%D0%B1%D0%B0%D0%BA.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">А где же Рошар</h5>
                       <p class="card-text">Глазков Юрий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_где_же_Рошар.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B3%D0%B4%D0%B5_%D0%B6%D0%B5_%D0%A0%D0%BE%D1%88%D0%B0%D1%80.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">А и Е</h5>
                       <p class="card-text">Стульник Сергей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_и_Е.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B8_%D0%95.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">А я пойду дальше</h5>
                       <p class="card-text">Лейбер Фриц</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_я_пойду_дальше.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D1%8F_%D0%BF%D0%BE%D0%B9%D0%B4%D1%83_%D0%B4%D0%B0%D0%BB%D1%8C%D1%88%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">А как же еще</h5>
                       <p class="card-text">Каттнер Генри</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_как_же_еще.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BA%D0%B0%D0%BA_%D0%B6%D0%B5_%D0%B5%D1%89%D0%B5.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">А мне до них</h5>
                       <p class="card-text">Корепанов Алексей</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_мне_до_них.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BC%D0%BD%D0%B5_%D0%B4%D0%BE_%D0%BD%D0%B8%D1%85.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">А могла бы и быть</h5>
                       <p class="card-text">Григорьев Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_могла_бы_и_быть.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BC%D0%BE%D0%B3%D0%BB%D0%B0_%D0%B1%D1%8B_%D0%B8_%D0%B1%D1%8B%D1%82%D1%8C.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">А моя мама - ведьма!</h5>
                       <p class="card-text">Тенн Уильям</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_моя_мама_-_ведьма!.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BC%D0%BE%D1%8F_%D0%BC%D0%B0%D0%BC%D0%B0_-_%D0%B2%D0%B5%D0%B4%D1%8C%D0%BC%D0%B0%21.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">А мы лезем в окно</h5>
                       <p class="card-text">Молзберг Барри</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_мы_лезем_в_окно.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BC%D1%8B_%D0%BB%D0%B5%D0%B7%D0%B5%D0%BC_%D0%B2_%D0%BE%D0%BA%D0%BD%D0%BE.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
