--- a/pages/index8.html
+++ b/pages/index8.html
@@ -108,7 +108,7 @@
                       <h5 class="card-title">А она уходила</h5>
                       <p class="card-text">Дымов Феликс Яковлевич</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_она_уходила.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BE%D0%BD%D0%B0_%D1%83%D1%85%D0%BE%D0%B4%D0%B8%D0%BB%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">А поезд идет</h5>
                       <p class="card-text">Ашкинази Леонид</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_поезд_идет.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%BF%D0%BE%D0%B5%D0%B7%D0%B4_%D0%B8%D0%B4%D0%B5%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">А роза упала на лапу Азора</h5>
                       <p class="card-text">Осинский Владимир</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_роза_упала_на_лапу_Азора.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D1%80%D0%BE%D0%B7%D0%B0_%D1%83%D0%BF%D0%B0%D0%BB%D0%B0_%D0%BD%D0%B0_%D0%BB%D0%B0%D0%BF%D1%83_%D0%90%D0%B7%D0%BE%D1%80%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">А вдруг они победят</h5>
                       <p class="card-text">Белен</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_вдруг_они_победят.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B2%D0%B4%D1%80%D1%83%D0%B3_%D0%BE%D0%BD%D0%B8_%D0%BF%D0%BE%D0%B1%D0%B5%D0%B4%D1%8F%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">А вдруг</h5>
                       <p class="card-text">Грешнов Михаил</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_вдруг.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B2%D0%B4%D1%80%D1%83%D0%B3.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">А все из-за любви</h5>
                       <p class="card-text">Гуларт Рон</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_все_из-за_любви.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B2%D1%81%D0%B5_%D0%B8%D0%B7-%D0%B7%D0%B0_%D0%BB%D1%8E%D0%B1%D0%B2%D0%B8.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">А всходы будут не скоро</h5>
                       <p class="card-text">Чешко Федор</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_всходы_будут_не_скоро.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B2%D1%81%D1%85%D0%BE%D0%B4%D1%8B_%D0%B1%D1%83%D0%B4%D1%83%D1%82_%D0%BD%D0%B5_%D1%81%D0%BA%D0%BE%D1%80%D0%BE.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
