--- a/pages/index9.html
+++ b/pages/index9.html
@@ -88,7 +88,7 @@
                       <h5 class="card-title">А вы не верили</h5>
                       <p class="card-text">Ягупова Светлана</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_вы_не_верили.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B2%D1%8B_%D0%BD%D0%B5_%D0%B2%D0%B5%D1%80%D0%B8%D0%BB%D0%B8.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       <h5 class="card-title">А за тобой придет генерал</h5>
                       <p class="card-text">Воробьев Борис</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_за_тобой_придет_генерал.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B7%D0%B0_%D1%82%D0%BE%D0%B1%D0%BE%D0%B9_%D0%BF%D1%80%D0%B8%D0%B4%D0%B5%D1%82_%D0%B3%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D0%BB.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
                       <h5 class="card-title">А жизнь идёт</h5>
                       <p class="card-text">Бояндин Константин</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/А_жизнь_идёт.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90_%D0%B6%D0%B8%D0%B7%D0%BD%D1%8C_%D0%B8%D0%B4%D1%91%D1%82.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -150,7 +150,7 @@
                       <h5 class="card-title">Ааст Ллун - архитектор неба</h5>
                       <p class="card-text">Гуревич Георгий Иосифович</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Ааст_Ллун_-_архитектор_неба.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B0%D1%81%D1%82_%D0%9B%D0%BB%D1%83%D0%BD_-_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80_%D0%BD%D0%B5%D0%B1%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                       <h5 class="card-title">Абадон</h5>
                       <p class="card-text">Купцов Василий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абадон.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D0%B0%D0%B4%D0%BE%D0%BD.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                       <h5 class="card-title">Абицелла</h5>
                       <p class="card-text">Попогребский П</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абицелла.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D0%B8%D1%86%D0%B5%D0%BB%D0%BB%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                       <h5 class="card-title">Абракадабра</h5>
                       <p class="card-text">Рассел Эрик Фрэнк</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абракадабра.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%80%D0%B0%D0%BA%D0%B0%D0%B4%D0%B0%D0%B1%D1%80%D0%B0.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h5 class="card-title">Абсолютная Энциклопедия. Том 2</h5>
                       <p class="card-text">Диксон Гордон</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютная_Энциклопедия._Том_2.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%B0%D1%8F_%D0%AD%D0%BD%D1%86%D0%B8%D0%BA%D0%BB%D0%BE%D0%BF%D0%B5%D0%B4%D0%B8%D1%8F._%D0%A2%D0%BE%D0%BC_2.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -256,7 +256,7 @@
                       <h5 class="card-title">Абсолютная гарантия</h5>
                       <p class="card-text">Иванов Борис</p>
                       <p class="card-text"><span class="badge badge-light">Детективная фантастика</span><span class="badge badge-light">Космическая фантастика</span><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютная_гарантия.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%B0%D1%8F_%D0%B3%D0%B0%D1%80%D0%B0%D0%BD%D1%82%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                       <h5 class="card-title">Абсолютная полиция</h5>
                       <p class="card-text">Лисин Валерий</p>
                       <p class="card-text"><span class="badge badge-light">Научная фантастика</span></p>
-                      <p class="card-text"><a href="/static/books/Абсолютная_полиция.txt" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="/static/books/%D0%90%D0%B1%D1%81%D0%BE%D0%BB%D1%8E%D1%82%D0%BD%D0%B0%D1%8F_%D0%BF%D0%BE%D0%BB%D0%B8%D1%86%D0%B8%D1%8F.txt" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
