--- a/template.html
+++ b/template.html
@@ -51,14 +51,14 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="{{book.img_src}}" class="card-img" alt=....>
+                    <img src="{{book.img_src|urlencode}}" class="card-img" alt=....>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">{{book.title}}</h5>
                       <p class="card-text">{{book.author}}</p>
                       <p class="card-text">{% for book in book.genres %}<span class="badge badge-light">{{book}}</span>{% endfor %}</p>
-                      <p class="card-text"><a href="{{book.book_path}}" target="_blank">Читать</a> </p>
+                      <p class="card-text"><a href="{{book.book_path|urlencode}}" target="_blank">Читать</a> </p>
                     </div>
                   </div>
                 </div>
